--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <body>
         <div class="header">Home Server - Hanau</div>
         <hr />
-        <div class="article">
-            <h4>The date/time on the server is: {{ time }}</h4>
-            <h4>Temperature level: {{ temp }}°C</h4>
-            <h4>Humidity-Level is at: {{ humidity }}%</h4>
+        <div class="main">
+            <p class="special">Date/Time: {{ time }}</p>
+            <p>Temperature level: {{ temp }}°C</p>
+            <p>Humidity level is at: {{ humidity }}%</p>
         </div>
+        <div id="navigation">
+            <a href="#">Navigation 1 |</a>
+            <a href="#"> Navigation 2 |</a>
+            <a href="#"> Navigation 3</a>
+        </div>
+        <div class="footer">&copy 2022 Matthias Hartmann</div>
     </body>
 </html>
