--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>{{ title }}</title>
         <meta charset ="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../static/style.css"/>
     </head>
     <body>
         <div class="header"> {{ time }} </div>
